--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -2201,11 +2201,12 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "from typing import List\n",
-    "from tqdm import tqdm  \n",
+    "from tqdm import tqdm\n",
+    "\n",
     "\n",
     "def plot_loss(losses: List[float]) -> None:\n",
     "    plt.figure(figsize=(8, 6))\n",
-    "    plt.plot(range(1, len(losses) + 1), losses, marker='o', linestyle='-', color='b')\n",
+    "    plt.plot(range(1, len(losses) + 1), losses, marker=\"o\", linestyle=\"-\", color=\"b\")\n",
     "    plt.title(\"Training Loss Over Epochs\")\n",
     "    plt.xlabel(\"Epochs\")\n",
     "    plt.ylabel(\"Loss\")\n",
@@ -2303,19 +2304,19 @@
     "# Training loop\n",
     "num_epochs: int = 5\n",
     "outputs: List[float] = []\n",
-    "epoch_losses: List[float] = []  \n",
+    "epoch_losses: List[float] = []\n",
     "\n",
     "for epoch in range(num_epochs):\n",
-    "    epoch_loss = 0 \n",
+    "    epoch_loss = 0\n",
     "    progress_bar = tqdm(data_loader, desc=f\"Epoch {epoch+1}/{num_epochs}\", leave=True)\n",
-    "    \n",
-    "    for (img, label) in progress_bar:\n",
+    "\n",
+    "    for img, label in progress_bar:\n",
     "        reconstructed_img = model2(img)\n",
     "        loss = criterion(reconstructed_img, img)\n",
     "        optimizer.zero_grad()\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
-    "        epoch_loss += loss.item() \n",
+    "        epoch_loss += loss.item()\n",
     "        progress_bar.set_postfix(loss=f\"{loss.item():.4f}\")\n",
     "    #  average loss for the epoch\n",
     "    avg_loss = epoch_loss / len(data_loader)\n",
@@ -2323,7 +2324,7 @@
     "    print(f\"Epoch : {epoch+1} | Avg Loss : {avg_loss:.4f}\")\n",
     "    outputs.append((epoch, img, reconstructed_img))\n",
     "\n",
-    "plot_loss(epoch_losses)\n"
+    "plot_loss(epoch_losses)"
    ]
   },
   {
@@ -2340,7 +2341,7 @@
     }
    ],
    "source": [
-    "model_save_path = \"cached_model/autoencoder_model.pth\"  \n",
+    "model_save_path = \"cached_model/autoencoder_model.pth\"\n",
     "torch.save(model2.state_dict(), model_save_path)\n",
     "print(f\"Model saved to {model_save_path}\")"
    ]
@@ -2408,15 +2409,17 @@
     "    imgs = outputs[k][1].detach().numpy()\n",
     "    recon = outputs[k][2].detach().numpy()\n",
     "    for i, item in enumerate(imgs):\n",
-    "        if i >= 9: break\n",
-    "        plt.subplot(2, 9, i+1)\n",
+    "        if i >= 9:\n",
+    "            break\n",
+    "        plt.subplot(2, 9, i + 1)\n",
     "        # item = item.reshape(-1, 28,28) # -> use for Autoencoder_Linear\n",
     "        # item: 1, 28, 28\n",
     "        plt.imshow(item[0])\n",
-    "            \n",
+    "\n",
     "    for i, item in enumerate(recon):\n",
-    "        if i >= 9: break\n",
-    "        plt.subplot(2, 9, 9+i+1) # row_length + i + 1\n",
+    "        if i >= 9:\n",
+    "            break\n",
+    "        plt.subplot(2, 9, 9 + i + 1)  # row_length + i + 1\n",
     "        # item = item.reshape(-1, 28,28) # -> use for Autoencoder_Linear\n",
     "        # item: 1, 28, 28\n",
     "        plt.imshow(item[0])"
